[package]
name = "meet"
version = "0.1.0"
authors = ["Hendrik Sollich <hendrik@hoodie.de>"]

[dependencies]
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
r2d2 = "0.7"
diesel = { version = "0.14", features = ["sqlite"] }
diesel_codegen = { version = "0.14", features = ["sqlite"] }
r2d2-diesel = "0.14"
dotenv = "*"
